# typst-editor

./: README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
src/: App.css  App.tsx  MenuBar.tsx  Toolbar.tsx  TypstLsp.ts  index.css  typst.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lsp.rs  main.rs  world.rs
src/components/: FileTree.tsx  RecentFiles.tsx  SettingsPanel.tsx
src/components/ui/: dropdown-menu.tsx  tooltip.tsx
src/hooks/: useFileManager.ts  useKeyboardShortcuts.ts
src/typst-ts/: typst_ts_renderer.d.ts  typst_ts_renderer.js
