[package]
name = "typst-editor"
version = "0.1.0"
description = "A Typst Editor built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "typst_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "sync", "time"] }
tokio-tungstenite = "0.23"

# Typst compilation
typst = "0.14"
typst-svg = "0.14"
typst-pdf = "0.14"
typst-syntax = "0.14"
typst-library = "0.14"
typst-utils = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
typst-kit = { version = "0.14", features = ["embed-fonts"] }

comemo = "0.4"
chrono = "0.4"
parking_lot = "0.12"

