[package]
name = "typst-editor"
version = "0.1.0"
description = "A Typst Editor built with Tauri"
authors = ["you"]
edition = "2021"

[lib]
name = "typst_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "process", "time"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Typst compilation
typst = "0.14"
typst-svg = "0.14"
typst-pdf = "0.14"
typst-syntax = "0.14"
typst-library = "0.14"
typst-utils = "0.14"
typst-assets = { version = "0.14", features = ["fonts"] }
typst-kit = { version = "0.14", features = ["embed-fonts"] }

comemo = "0.4"
chrono = "0.4"
parking_lot = "0.12"

